--- a/Blades-in-the-Dark-SRD.html
+++ b/Blades-in-the-Dark-SRD.html
@@ -10,7 +10,7 @@
 <p>In addition to creating characters, you’ll also create the crew by choosing which type of criminal enterprise you’re interested in exploring.</p>
 <h2 id="the-game-master">The Game Master</h2>
 <p>The GM establishes the dynamic world around the characters. The GM plays all the non-player characters in the world by giving each one a concrete desire and preferred method of action.</p>
-<p>The GM helps organize the conversation of the game so it’s pointed toward the interesting elements of play. The GM isn’t in charge of the story and doesn’t have to plan events ahead of time. They present interesting opportunities to the players, then follow the chain of action and consequences wherever they lead.</p>
+<p>The GM helps organize the conversation of the game so it’s pointed toward the interesting elements of play. The GM isn’t in charge of the story and doesn’t have to plan events ahead of time. They present interesting opportunities to the players, then follow the chain of actions and consequences wherever they lead.</p>
 <h2 id="playing-a-session">Playing A Session</h2>
 <p>A session of <em>Blades in the Dark</em> is like an episode of a TV show. There are one or two main events, plus maybe some side-story elements, which all fit into an ongoing series. A session of play can last anywhere from two to six hours, depending on the preferences of the group.</p>
 <p>During a session, the crew of scoundrels works together to choose a score to accomplish, then they make a few dice rolls to jump into the action of the score in progress. The PCs take actions, suffer consequences, and finish the operation (succeed or fail). Then the crew has downtime, during which they recover, pursue side-projects, and indulge their vices. After downtime, the players once again look for a new opportunity or create their own goals and pursuits, and we play to find out what happens next.</p>
@@ -240,7 +240,7 @@
 <p><em>“I didn’t realize it was that far. Hmmm. Okay, what if I just go as fast as I can. Can I get all the way across if I make a desperate roll?”</em></p>
 <p><em>“Yep, sounds good to me!”</em></p>
 <h2 id="consequences">Consequences</h2>
-<p>When a PC suffers an effect from an enemy or a dangerous situation, it’s called a <strong>consequence</strong>. Consequences are the companion to effects. PCs have effect on the world around them and they suffer consequences in return from the risks they face.</p>
+<p>When a PC suffers an effect from an enemy or a dangerous situation, it’s called a <strong>consequence</strong>. Consequences are the companions of effects. PCs have an effect on the world around them and they suffer consequences in return from the risks they face.</p>
 <h1 id="setting-position-effect">Setting Position &amp; Effect</h1>
 <p>The GM sets position and effect for an action roll at the same time, after the player says what they’re doing and chooses their action. Usually, <strong>Risky / Standard</strong> is the default combination, modified by the action being used, the strength of the opposition, and the effect factors.</p>
 <p>The ability to set position and effect as independent variables gives you nine combinations to choose from, to help you convey a wide array of fictional circumstances.</p>
@@ -319,7 +319,7 @@
 <p>The fortune roll is a tool the GM can use to disclaim decision making. You use a fortune roll in two different ways:</p>
 <p><strong>When you need to make a determination about a situation the PCs aren’t directly involved in</strong> and don’t want to simply decide the outcome.</p>
 <blockquote>
-<p>Two rival gands are fighting. How does that turn out? The GM makes a fortune roll for each of them. One gets a good result but the other gets limited effect. The GM decides that the first gang takes over some of their rivals’ turf but suffer some injuries during the skirmish.</p>
+<p>Two rival gangs are fighting. How does that turn out? The GM makes a fortune roll for each of them. One gets a good result but the other gets limited effect. The GM decides that the first gang takes over some of their rivals’ turf but suffer some injuries during the skirmish.</p>
 </blockquote>
 <p><strong>When an outcome is uncertain</strong>, but no other roll applies to the situation at hand.</p>
 <blockquote>
@@ -359,7 +359,7 @@
 <li>You might <span class="game-term">Attune</span> to see echoes of recent spirit activity. <em>Have any new ghosts been here? How can I find the spirit well that’s calling to them? What should I be worried about?</em></li>
 <li>You might <span class="game-term">Command</span> a local barkeep to tell you what he knows about the secret meetings held in his back room. <em>What’s really going on here? What’s he really feeling about this? Is he part of this secret group?</em></li>
 <li>You might <span class="game-term">Consort</span> with a well-connected friend to learn secrets about an enemy, rival, or potential ally. <em>What do they intend to do? What might I suspect about their motives? How can I discover leverage to manipulate them?</em></li>
-<li>You might <span class="game-term">Hunt</span> a courier across the city, to discover who’s receiving satchels of coin from a master duelsit. <em>Where does the package end up? How can I find out who signed for the package at City Hall?</em></li>
+<li>You might <span class="game-term">Hunt</span> a courier across the city, to discover who’s receiving satchels of coin from a master duelist. <em>Where does the package end up? How can I find out who signed for the package at City Hall?</em></li>
 <li>You might <span class="game-term">Study</span> ancient and obscure books to discover an arcane secret. <em>How can I disable the runes of warding? __Will anyone sense if they’re disabled?</em></li>
 <li>Or you might <span class="game-term">Study</span> a person to read their intentions and feelings. <em>What are they really feeling? How could I get them to trust me?</em></li>
 <li>You might <span class="game-term">Survey</span> a manor house to case it for a heist. <em>What’s a good point of infiltration? What’s the danger here?</em></li>
